@@ -231,6 +231,7 @@ and how to embed it in other applications.
 \input{libcookie}
 \input{libxmlrpclib}
 \input{libsimplexmlrpc}
+\input{libdocxmlrpc}
 \input{libasyncore}
 \input{libasynchat}
 
